Second itteration before block B

--- a/index.html
+++ b/index.html
@@ -26,17 +26,64 @@
         <main>
             <dl>
                 <dt>УВАГА ДО ДЕТАЛЕЙ</dt>
-                <dd>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</dd>
+                    <dd>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</dd>
                 <dt>ПУНКТУАЛЬНІСТЬ</dt>
-                <dd>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</dd>
+                    <dd>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</dd>
                 <dt>ПЛАНУВАННЯ</dt>
-                <dd>Так само консультація з широким активом значною мірою зумовлює.</dd>
+                    <dd>Так само консультація з широким активом значною мірою зумовлює.</dd>
                 <dt>СУЧАСНІ ТЕХНОЛОГІЇ</dt>
-                <dd>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</dd>
+                    <dd>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</dd>
             </dl>
+            <section>
+                <h2>Чим ми займаємось</h2>
+                <ul>
+                    <li>
+                        <img src="./images/photos/img a.jpg" alt="Людина працює" width="370" />
+                    </li>
+                    <li>
+                        <img src="./images/photos/img b.jpg" alt="Людина тримає телефон" width="370" />
+                    </li>
+                    <li>
+                        <img src="./images/photos/img c.jpg" alt="Людина вибирає кольори" width="370" />
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h3>Наша команда</h3>
+                <ul>
+                    <li>
+                       <img src="./images/photos/pd.jpg" alt="Чоловік з бородою в окулярах" width="270" /> 
+                       <b>Ігор Дем'яненко</b>
+                       <span>Product Designer</span>
+                    </li>
+                    <li>
+                        <img src="./images/photos/fd.jpg" alt="ОЖінка блондинка в окулярах" width="270" />
+                        <b>Ольга Рєпіна</b>
+                        <span>Frontend Developer</span>
+                    </li>
+                    <li>
+                        <img src="./images/photos/mk.jpg" alt="Чоловік зі щетиною" width="270" />
+                        <b>Микола Тарасов</b>
+                        <span>Marketing</span>
+                    </li>
+                    <li>
+                        <img src="./images/photos/ui.jpg" alt="Чоловік з бородою в окулярах" width="270" />
+                        <b>Михайло Єрмаков</b>
+                        <span>UI Designer</span>
+                    </li>
+                </ul>
+            </section>
         </main>
+        <footer>
+            <a href="/">WebStudio</a>
+            <address>
+                <ul>
+                    <li><a>м. Київ, пр-т Лесі Українки, 26</a></li>
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </footer>
     </body>
-    <footer>
-
-    </footer>
+    
 </html>
