Third itteration before Code Guide.

--- a/index.html
+++ b/index.html
@@ -15,60 +15,71 @@
             <address>
                 <ul>
                     <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </header>
-        <hero>
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <a href="">Замовити послугу</a>
-        </hero>
         <main>
-            <dl>
-                <dt>УВАГА ДО ДЕТАЛЕЙ</dt>
-                    <dd>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</dd>
-                <dt>ПУНКТУАЛЬНІСТЬ</dt>
-                    <dd>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</dd>
-                <dt>ПЛАНУВАННЯ</dt>
-                    <dd>Так само консультація з широким активом значною мірою зумовлює.</dd>
-                <dt>СУЧАСНІ ТЕХНОЛОГІЇ</dt>
-                    <dd>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</dd>
-            </dl>
             <section>
-                <h2>Чим ми займаємось</h2>
+                <h1>Ефективні рішення для вашого бізнесу</h1>
+                <a href="">Замовити послугу</a>
+            </section>
+            <section>
+                <h2>Особливості</h2>
                 <ul>
                     <li>
-                        <img src="./images/photos/img a.jpg" alt="Людина працює" width="370" />
+                        <b>УВАГА ДО ДЕТАЛЕЙ</b><br>
+                        <span>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</span>
                     </li>
                     <li>
-                        <img src="./images/photos/img b.jpg" alt="Людина тримає телефон" width="370" />
+                        <b>ПУНКТУАЛЬНІСТЬ</b><br>
+                        <span>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</span>
                     </li>
                     <li>
-                        <img src="./images/photos/img c.jpg" alt="Людина вибирає кольори" width="370" />
+                        <b>ПЛАНУВАННЯ</b><br>
+                        <span>Так само консультація з широким активом значною мірою зумовлює.</span>
+                    </li>
+                    <li>
+                        <b>СУЧАСНІ ТЕХНОЛОГІЇ</b><br>
+                        <span>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</span>
                     </li>
                 </ul>
             </section>
             <section>
-                <h3>Наша команда</h3>
+                <h3>Чим ми займаємось</h3>
+                <ul>
+                    <li>
+                        <img src="./images/photos/img_a.jpg" alt="Людина працює" width="370" />
+                    </li>
+                    <li>
+                        <img src="./images/photos/img_b.jpg" alt="Людина тримає телефон" width="370" />
+                    </li>
+                    <li>
+                        <img src="./images/photos/img_c.jpg" alt="Людина вибирає кольори" width="370" />
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h4>Наша команда</h4>
                 <ul>
                     <li>
                        <img src="./images/photos/pd.jpg" alt="Чоловік з бородою в окулярах" width="270" /> 
-                       <b>Ігор Дем'яненко</b>
+                       <b>Ігор Дем'яненко</b><br>
                        <span>Product Designer</span>
                     </li>
                     <li>
                         <img src="./images/photos/fd.jpg" alt="ОЖінка блондинка в окулярах" width="270" />
-                        <b>Ольга Рєпіна</b>
+                        <b>Ольга Рєпіна</b><br>
                         <span>Frontend Developer</span>
                     </li>
                     <li>
                         <img src="./images/photos/mk.jpg" alt="Чоловік зі щетиною" width="270" />
-                        <b>Микола Тарасов</b>
+                        <b>Микола Тарасов</b><br>
                         <span>Marketing</span>
                     </li>
                     <li>
                         <img src="./images/photos/ui.jpg" alt="Чоловік з бородою в окулярах" width="270" />
-                        <b>Михайло Єрмаков</b>
+                        <b>Михайло Єрмаков</b><br>
                         <span>UI Designer</span>
                     </li>
                 </ul>
@@ -80,7 +91,7 @@
                 <ul>
                     <li><a>м. Київ, пр-т Лесі Українки, 26</a></li>
                     <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </footer>
