--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
     <head>
         <meta charset="utf-8"/>
-        <title>Веб студія WebStudio</title>
+        <title>веб студія WebStudio</title>
     </head>
     <body>
         <header>
