Second version witout "p3".

--- a/index.html
+++ b/index.html
@@ -12,41 +12,39 @@
                 <li><a href="">Портфоліо</a></li>
                 <li><a href="">Контакти</a></li>
             </ul>
-            <address>
-                <ul>
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-                </ul>
-            </address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
         </header>
         <main>
             <section>
                 <h1>Ефективні рішення для вашого бізнесу</h1>
-                <a href="">Замовити послугу</a>
+                <button type="button">Замовити послугу</button>
             </section>
             <section>
                 <h2>Особливості</h2>
                 <ul>
                     <li>
-                        <b>УВАГА ДО ДЕТАЛЕЙ</b><br>
+                        <b>УВАГА ДО ДЕТАЛЕЙ</b>
                         <span>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</span>
                     </li>
                     <li>
-                        <b>ПУНКТУАЛЬНІСТЬ</b><br>
-                        <span>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</span>
+                        <b>ПУНКТУАЛЬНІСТЬ</b>
+                        <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
                     <li>
-                        <b>ПЛАНУВАННЯ</b><br>
-                        <span>Так само консультація з широким активом значною мірою зумовлює.</span>
+                        <b>ПЛАНУВАННЯ</b>
+                        <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
                     <li>
-                        <b>СУЧАСНІ ТЕХНОЛОГІЇ</b><br>
-                        <span>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</span>
+                        <b>СУЧАСНІ ТЕХНОЛОГІЇ</b>
+                        <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
                 </ul>
             </section>
             <section>
-                <h3>Чим ми займаємось</h3>
+                <h2>Чим ми займаємось</h2>
                 <ul>
                     <li>
                         <img src="./images/photos/img_a.jpg" alt="Людина працює" width="370" />
@@ -60,27 +58,27 @@
                 </ul>
             </section>
             <section>
-                <h4>Наша команда</h4>
+                <h2>Наша команда</h2>
                 <ul>
                     <li>
                        <img src="./images/photos/pd.jpg" alt="Чоловік з бородою в окулярах" width="270" /> 
-                       <b>Ігор Дем'яненко</b><br>
-                       <span>Product Designer</span>
+                       <h3>Ігор Дем'яненко</h3>
+                       <p>Product Designer</p>
                     </li>
                     <li>
                         <img src="./images/photos/fd.jpg" alt="ОЖінка блондинка в окулярах" width="270" />
-                        <b>Ольга Рєпіна</b><br>
-                        <span>Frontend Developer</span>
+                        <h4>Ольга Рєпіна</h4>
+                        <p>Frontend Developer</p>
                     </li>
                     <li>
                         <img src="./images/photos/mk.jpg" alt="Чоловік зі щетиною" width="270" />
-                        <b>Микола Тарасов</b><br>
-                        <span>Marketing</span>
+                        <h5>Микола Тарасов</h5>
+                        <p>Marketing</p>
                     </li>
                     <li>
                         <img src="./images/photos/ui.jpg" alt="Чоловік з бородою в окулярах" width="270" />
-                        <b>Михайло Єрмаков</b><br>
-                        <span>UI Designer</span>
+                        <h6>Михайло Єрмаков</h6>
+                        <p>UI Designer</p>
                     </li>
                 </ul>
             </section>
@@ -89,7 +87,7 @@
             <a href="/">WebStudio</a>
             <address>
                 <ul>
-                    <li><a>м. Київ, пр-т Лесі Українки, 26</a></li>
+                    <li><a href="https://goo.gl/maps/RzsM1R2CV1T8fxCx7" target="_blank">м. Київ, пр-т Лесі Українки, 26</a></li>
                     <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
