--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul>
                     <li>
                         <b>УВАГА ДО ДЕТАЛЕЙ</b>
-                        <span>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</span>
+                        <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
                     <li>
                         <b>ПУНКТУАЛЬНІСТЬ</b>
