--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
                 <h2>Особливості</h2>
                 <ul>
                     <li>
-                        <b>УВАГА ДО ДЕТАЛЕЙ</b>
+                        <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
                     <li>
-                        <b>ПУНКТУАЛЬНІСТЬ</b>
+                        <h4>ПУНКТУАЛЬНІСТЬ</h4>
                         <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
                     <li>
-                        <b>ПЛАНУВАННЯ</b>
+                        <h5>ПЛАНУВАННЯ</h5>
                         <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
                     <li>
-                        <b>СУЧАСНІ ТЕХНОЛОГІЇ</b>
+                        <h6>СУЧАСНІ ТЕХНОЛОГІЇ</h6>
                         <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
                 </ul>
