--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <body>
         <header>
             <a href="/">WebStudio</a>
-            <ul>
-                <li><a href="">Студія</a></li>
-                <li><a href="">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
-            </ul>
+            <nav>
+                <a href="">Студія</a></li>
+                <a href="">Портфоліо</a></li>
+                <a href="">Контакти</a></li>
+            </nav>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
