Check the <nav> tag.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <header>
             <a href="/">WebStudio</a>
             <nav>
-                <a href="">Студія</a></li>
-                <a href="">Портфоліо</a></li>
-                <a href="">Контакти</a></li>
+                <a href="">Студія</a>
+                <a href="">Портфоліо</a>
+                <a href="">Контакти</a>
             </nav>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
