--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <body>
         <header>
             <a href="/">WebStudio</a>
-            <nav>
-                <a href="">Студія</a>
-                <a href="">Портфоліо</a>
-                <a href="">Контакти</a>
+            <nav type="menu">
+                <a href="./studio.html">Студія</a>
+                <a href="./portfolio.html">Портфоліо</a>
+                <a href="#addres">Контакти</a>
             </nav>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
@@ -85,7 +85,7 @@
         </main>
         <footer>
             <a href="/">WebStudio</a>
-            <address>
+            <address id="addres">
                 <ul>
                     <li><a href="https://goo.gl/maps/RzsM1R2CV1T8fxCx7" target="_blank">м. Київ, пр-т Лесі Українки, 26</a></li>
                     <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
