--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <body>
         <header>
             <a href="/">WebStudio</a>
-            <nav type="menu">
-                <a href="./studio.html">Студія</a>
-                <a href="./portfolio.html">Портфоліо</a>
-                <a href="#addres">Контакти</a>
+            <nav>
+                <ul>
+                    <li><a href="">Студія</a></li>
+                    <li><a href="">Портфоліо</a></li>
+                    <li><a href="">Контакти</a></li>
+                </ul>
             </nav>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
